--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "ember-emoji-picker",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "version": "1.0.0",
+  "description": "Ember Emoji Picker is a Slack-like customizable emoji picker component for EmberJS",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "emoji",
+    "emoji picker",
+    "slack"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Jean du Plessis",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/jeanduplessis/ember-emoji-picker",
   "scripts": {
     "build": "ember build",
+    "build:data": "node scripts/build-data",
+    "clean": "rimraf data/ dist/ node_modules/ tmp/",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
     "ember-cli-babel": "^6.3.0",
-    "ember-cli-sass": "^7.0.0",
-    "ember-cli-htmlbars": "^2.0.1"
+    "ember-cli-htmlbars": "^2.0.1",
+    "ember-cli-sass": "^7.0.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -33,12 +38,17 @@
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-string-helpers": "^1.4.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-prop-types": "^3.13.4",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0-beta.1",
+    "ember-truth-helpers": "^1.3.0",
+    "emoji-datasource": "^3.0.0",
+    "emojilib": "^2.2.1",
     "inflection": "^1.12.0",
     "loader.js": "^4.2.3"
   },
